CSS-fix and big case letters in poetslist
+ First letter is now uppercase in poets list when
  we create separator
+ CSS change to textarea. Now scrollbars are hidden
  at least in Internet Explorer until there is enough
  text and scrollbar is needed. In Firefox there were
  no scrollbars if not necessary, but this makes same
  trick to Internet Explorer (and maybe for other
  browsers too?)

--- a/runosydan.css
+++ b/runosydan.css
@@ -241,6 +241,11 @@ input[type=submit]
 	padding-bottom: 0px;
 }
 
+textarea
+{
+	overflow: auto;
+}
+
 .ownpage textarea, .leave_comment textarea
 {
 	width: 360px;
